# subdivision-surfaces

./: .gitignore  Computational_Geometry.sln  LICENSE  README.md
Computational_Geometry/: Computational_Geometry.vcxproj  Computational_Geometry.vcxproj.filters  FooExe
Computational_Geometry/Dependencies/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
Computational_Geometry/Shaders/: quad.tesc  quad.tese  shader.frag  shader.vert  triangular.tesc  triangular.tese
Computational_Geometry/src/: CMakeLists.txt  Main.cpp  conanfile.txt
Computational_Geometry/src/GUI/: GUI.cpp  GUI.h  SettingsWindow.cpp  SettingsWindow.h  Window.cpp  Window.h
Computational_Geometry/src/Mesh/: Mesh.cpp  Mesh.h
Computational_Geometry/src/Mesh/Objects/: Cube.cpp  Cube.h  Icosahedron.cpp  Icosahedron.h  Prism.cpp  Prism.h  Pyramid.cpp  Pyramid.h  Torus.cpp  Torus.h
Computational_Geometry/src/Scene/: RenderObjects.cpp  Scene.cpp  Scene.h
Computational_Geometry/src/Shader/: Shader.h  Shader_Functions.cpp  Shader_Uniforms.cpp
Computational_Geometry/src/Utility/: Timer.h  TrackAllocation.h  Utility.h
